--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@types/debug": "4.1.5",
     "@types/express": "4.17.11",
     "@types/node": "14.14.31",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "@types/socket.io": "2.1.4",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
@@ -18,7 +20,8 @@
     "prettier": "2.2.1",
     "socket.io": "2.3.0",
     "ts-node-dev": "^1.1.8",
-    "typescript": "4.2.3"
+    "typescript": "4.2.3",
+    "ws-rate-limit": "^0.0.0"
   },
   "license": "MIT",
   "main": "dist/index.js",
@@ -30,11 +33,12 @@
     "fix:other": "yarn prettier --write",
     "fix": "yarn fix:other && yarn fix:code",
     "prettier": "prettier . --ignore-path=.gitignore",
-    "start": "node dist/index.js",
+    "start": "PORT=3002 node  dist/index.js",
     "start:dev": "cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only src/index.ts",
     "test:code": "eslint --ext .ts .",
     "test:other": "yarn prettier --list-different",
     "test": "yarn test:other && yarn test:code"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "packageManager": "yarn@3.1.0"
 }
